--- a/Identity/MicroservicesSample.Identity.Api/appsettings.json
+++ b/Identity/MicroservicesSample.Identity.Api/appsettings.json
@@ -42,6 +42,9 @@
   },
   "KafkaOptions": {
     "BootstrapServer": "localhost:9092",
-    "ClientId": "identity"
+    "ClientId": "identity",
+    "GroupId": "identity",
+    "Enabled": true,
+    "TimeoutSeconds": 10
   }
 }
