--- a/Notebooks/MicroservicesSample.Messages.Api/appsettings.json
+++ b/Notebooks/MicroservicesSample.Messages.Api/appsettings.json
@@ -35,6 +35,9 @@
   },
   "KafkaOptions": {
     "BootstrapServer": "localhost:9092",
-    "ClientId": "notebooks"
+    "ClientId": "notebooks",
+    "GroupId": "notebooks",
+    "Enabled": true,
+    "TimeoutSeconds": 10
   }
 }
