added grpc support

--- a/Notebooks/MicroservicesSample.Messages.Api/appsettings.json
+++ b/Notebooks/MicroservicesSample.Messages.Api/appsettings.json
@@ -15,7 +15,8 @@
     "Issuer": "identity-service",
     "ExpiryMinutes": 120,
     "ValidateAudience": true,
-    "ValidAudience": "http://localhost:5000/"
+    "ValidAudience": "http://localhost:5000/",
+    "ValidateIssuerSigningKey": false
   },
   "consul": {
     "enabled": true,
