added jaeger support

--- a/Gateway/MicroservicesSample.ApiGateway/appsettings.json
+++ b/Gateway/MicroservicesSample.ApiGateway/appsettings.json
@@ -25,5 +25,13 @@
     "pingInterval": 2,
     "removeAfterInterval": 5,
     "requestRetries": 3
+  },
+  "jaeger": {
+    "Enabled": false,
+    "ServiceName": "ApiGateway",
+    "UdpHost": "localhost",
+    "UdpPort": 6831,
+    "MaxPacketSize": 0,
+    "Sampler": "const"
   }
 }
