--- a/Identity/MicroservicesSample.Identity.Api/appsettings.json
+++ b/Identity/MicroservicesSample.Identity.Api/appsettings.json
@@ -46,5 +46,13 @@
     "GroupId": "identity",
     "Enabled": true,
     "TimeoutSeconds": 10
+  },
+  "jaeger": {
+    "Enabled": false,
+    "ServiceName": "Identity-service",
+    "UdpHost": "localhost",
+    "UdpPort": 6831,
+    "MaxPacketSize": 0,
+    "Sampler": "const"
   }
 }
