--- a/MicroservicesSample.OcelotGateway/MicroservicesSample.OcelotGateway/appsettings.json
+++ b/MicroservicesSample.OcelotGateway/MicroservicesSample.OcelotGateway/appsettings.json
@@ -5,5 +5,25 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "consul": {
+    "enabled": true,
+    "url": "http://192.168.3.3:8500",
+    "service": "ocelot-gateway",
+    "address": "192.168.3.3",
+    "port": "5004",
+    "pingEnabled": true,
+    "pingEndpoint": "ping",
+    "pingInterval": 2,
+    "removeAfterInterval": 5,
+    "requestRetries": 3
+  },
+  "jaeger": {
+    "Enabled": false,
+    "ServiceName": "Ocelot-gateway",
+    "UdpHost": "localhost",
+    "UdpPort": 6831,
+    "MaxPacketSize": 0,
+    "Sampler": "const"
   }
 }
