--- a/MicroservicesSample.Common/MicroservicesSample.Common.csproj
+++ b/MicroservicesSample.Common/MicroservicesSample.Common.csproj
@@ -1,24 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  
-  <PropertyGroup>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
 
-  <PropertyGroup>
-    <SkipDefaultEditorConfigAsAdditionalFile>true</SkipDefaultEditorConfigAsAdditionalFile>
-  </PropertyGroup>
-  <ItemGroup Condition="Exists('..\..\.editorconfig')">
-    <AdditionalFiles Include="..\..\.editorconfig" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.5.0" />
-    <PackageReference Include="Consul" Version="1.6.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
-  </ItemGroup>
+    <PropertyGroup>
+        <SkipDefaultEditorConfigAsAdditionalFile>true</SkipDefaultEditorConfigAsAdditionalFile>
+    </PropertyGroup>
+    <ItemGroup Condition="Exists('..\..\.editorconfig')">
+        <AdditionalFiles Include="..\..\.editorconfig" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Confluent.Kafka" Version="1.5.0" />
+        <PackageReference Include="Consul" Version="1.6.1.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
+        <PackageReference Include="OpenTracing" Version="0.12.1" />
+        <PackageReference Include="OpenTracing.Contrib.NetCore" Version="0.6.2" />
+        <PackageReference Include="Jaeger" Version="0.4.1" />
+    </ItemGroup>
 
 </Project>
