--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -180,6 +180,7 @@
         KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
   
     consul:
+      container_name: "consul"
       image: consul:1.8.0
       ports:
         - "8301:8301"
@@ -189,55 +190,61 @@
       command: "agent -server -bootstrap-expect 1 -ui -client 0.0.0.0"
   
     redis:
+      container_name: "redis"
       image: redis:latest
       ports:
         - '6379:6379'
   
-    # jaeger-collector:
-    #   image: jaegertracing/jaeger-collector
-    #   command: ["--cassandra.keyspace=jaeger_v1_dc1", "--cassandra.servers=cassandra", "--collector.zipkin.http-port=9411"]
-    #   ports:
-    #     - "14269"
-    #     - "14268:14268"
-    #     - "14250"
-    #     - "9411:9411"
-    #   restart: on-failure
-    #   depends_on:
-    #     - cassandra-schema
+    jaeger-collector:
+      container_name: "jaeger_collector"
+      image: jaegertracing/jaeger-collector
+      command: ["--cassandra.keyspace=jaeger_v1_dc1", "--cassandra.servers=cassandra", "--collector.zipkin.http-port=9411"]
+      ports:
+        - "14269"
+        - "14268:14268"
+        - "14250"
+        - "9411:9411"
+      restart: on-failure
+      depends_on:
+        - cassandra-schema
   
-    # jaeger-query:
-    #   image: jaegertracing/jaeger-query
-    #   command: ["--cassandra.keyspace=jaeger_v1_dc1", "--cassandra.servers=cassandra"]
-    #   ports:
-    #     - "16686:16686"
-    #     - "16687"
-    #   restart: on-failure
-    #   depends_on:
-    #    - cassandra-schema
+    jaeger-query:
+      container_name: "jaeger_query"
+      image: jaegertracing/jaeger-query
+      command: ["--cassandra.keyspace=jaeger_v1_dc1", "--cassandra.servers=cassandra"]
+      ports:
+        - "16686:16686"
+        - "16687"
+      restart: on-failure
+      depends_on:
+       - cassandra-schema
   
-    # jaeger-agent:
-    #   image: jaegertracing/jaeger-agent
-    #   command: ["--reporter.grpc.host-port=jaeger-collector:14250"]
-    #   ports:
-    #     - "5775:5775/udp"
-    #     - "6831:6831/udp"
-    #     - "6832:6832/udp"
-    #     - "5778:5778"
-    #   restart: on-failure
-    #   depends_on:
-    #     - jaeger-collector
+    jaeger-agent:
+      container_name: "jaeger-agent"
+      image: jaegertracing/jaeger-agent
+      command: ["--reporter.grpc.host-port=jaeger-collector:14250"]
+      ports:
+        - "5775:5775/udp"
+        - "6831:6831/udp"
+        - "6832:6832/udp"
+        - "5778:5778"
+      restart: on-failure
+      depends_on:
+        - jaeger-collector
   
-    # cassandra:
-    #   image: cassandra:3.9
+    cassandra:
+      container_name: "cassandra"
+      image: cassandra:3.9
   
-    # cassandra-schema:
-    #   image: jaegertracing/jaeger-cassandra-schema
-    #   depends_on:
-    #       - cassandra
+    cassandra-schema:
+      container_name: "cassandra-schema"
+      image: jaegertracing/jaeger-cassandra-schema
+      depends_on:
+          - cassandra
   
   #multiple databases in postgres container https://dev.to/bgord/multiple-postgres-databases-in-a-single-docker-container-417l
-    postgres_db:
-      container_name: "postgres_db"
+    postgres-db:
+      container_name: "postgres-db"
       image: "postgres:11.5-alpine"
       volumes:
         - ./pg-init-scripts:/docker-entrypoint-initdb.d
@@ -250,7 +257,7 @@
       restart: on-failure    
     
     pgadmin:
-      container_name: pgadmin_container
+      container_name: pgadmin
       image: dpage/pgadmin4
       environment:
         PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
@@ -259,10 +266,11 @@
         - "${PGADMIN_PORT:-5500}:80"
       restart: on-failure
       depends_on: 
-        - postgres_db
+        - postgres-db
+
   #https://coderoad.ru/46170736/%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0-aspnetcore-%D1%81-%D0%B1%D0%B0%D0%B7%D0%BE%D0%B9-%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85-MySQL-%D0%B2-docker
     identity:
-      container_name: "identity_service"
+      container_name: "identity-service"
       build: 
         context: ./../
         dockerfile: ./DockerFile.identity
@@ -273,15 +281,11 @@
       depends_on: 
         - broker
         - consul
-        - postgres_db        
-      links: 
-        - postgres_db
-        - redis
-        - consul
-        - broker
+        - postgres-db     
+        - jaeger-agent
 
     notebooks:
-      container_name: "notebooks_service"
+      container_name: "notebooks-service"
       build: 
         context: ./../
         dockerfile: ./DockerFile.notebooks
@@ -292,11 +296,33 @@
       depends_on: 
         - broker
         - consul
-        - postgres_db
-        - identity        
-      links: 
-        - broker
+        - postgres-db
+        - identity
+        - jaeger-agent
+    
+    gateway:
+      container_name: "gateway"
+      build: 
+        context: ./../
+        dockerfile: ./DockerFile.Gateway
+      ports: 
+        - "5000:5000"
+      environment: 
+        - ASPNETCORE_ENVIRONMENT=Docker
+      depends_on:
         - consul
-        - postgres_db
-        - redis
-        - identity        
+        - notebooks
+    
+    ocelot: 
+      container_name: "ocelot"
+      build: 
+        context: ./../
+        dockerfile: ./DockerFile.Ocelot
+      ports: 
+        - "5004:5004"
+      environment: 
+        - ASPNETCORE_ENVIRONMENT=Docker
+      depends_on:
+        - consul
+        - gateway
+        - identity
